# owikidata

./: .gitignore  README.md  builddocs.sh  dune-project  wikidata.opam
docs/: index.html
docs/_html/wikidata/Wikidata/: index.html
docs/_html/wikidata/Wikidata/Entity/: index.html
docs/_html/wikidata/Wikidata/Entity/Property/: index.html
docs/_html/wikidata/Wikidata__/Json_parsing_j/: index.html
docs/_html/wikidata/Wikidata__/Json_parsing_t/: index.html
docs/_html/wikidata/Wikidata__Json_parsing_j/: index.html
docs/wikidata/: index.html
docs/wikidata/Wikidata/Entity/: index.html
docs/wikidata/Wikidata/Entity/Item/: index.html
docs/wikidata/Wikidata/Entity/Item/class-t/: index.html
docs/wikidata/Wikidata/Entity/Property/: index.html
docs/wikidata/Wikidata/Entity/Property/class-t/: index.html
docs/wikidata/Wikidata/Entity/class-basic_entity/: index.html
docs/wikidata/Wikidata/Entity/class-label_description_aliases_mixin/: index.html
docs/wikidata/Wikidata/Entity/class-statements_mixin/: index.html
docs/wikidata/Wikidata/Snak/: index.html
docs/wikidata/Wikidata/Statement/: index.html
docs/wikidata/Wikidata__/: index.html
docs/wikidata/Wikidata__/Json_parsing_j/: index.html
docs/wikidata/Wikidata__/Json_parsing_t/: index.html
docs/wikidata/Wikidata__Json_parsing_j/: index.html
docs/wikidata/Wikidata__Json_parsing_t/: index.html
json/: dune  json_parsing.atd  json_parsing_j.ml  json_parsing_j.mli
lib/: dune  json_parsing.atd  json_parsing_j.ml  json_parsing_j.mli  json_parsing_t.ml  json_parsing_t.mli  wikidata.ml  wikidata.mli
test/: dune  local.ml  online.ml  wikidata_tests.ml
test/testfiles/: Q1038788.json  Q42.json  Q691283.json
test/testfiles/automated/: P69.json  Q2.json  Q36.json
