(library
 (public_name wikidata)
 (name wikidata)
 (libraries yojson atdgen-runtime)
 (instrumentation
  (backend bisect_ppx)))

(rule
 (targets json_parsing_j.ml json_parsing_j.mli)
 (deps json_parsing.atd)
 (mode promote)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets json_parsing_t.ml json_parsing_t.mli)
 (deps json_parsing.atd)
 (mode promote)
 (action
  (run atdgen -t %{deps})))
