(test
 (name local)
 (modules local)
 (libraries cohttp-lwt-unix atdgen-runtime alcotest alcotest-lwt wikidata))

(executable
 (name online)
 (modules online)
 (libraries cohttp-lwt-unix atdgen-runtime alcotest alcotest-lwt wikidata)
 (preprocess
  (pps lwt_ppx)))

(rule
 (alias "runtest-online-slow")
 (action
  (run ./online.exe)))
